# python-scripts

./: .gitignore  README.md  README_eliminate_dups_in_csv.md  README_extract_first_column_of_csv.md  README_pie_chart_generator.md  README_scans_rename.md  README_sphere_texture_generator.md  README_square_image_with_centered_cross_generator.md  README_svg_pattern_for_vase.md  README_svg_to_bitmap_converter.md  README_triangles.md  README_unzip_files_then_clean.md  README_video_content_cutter.md  README_wordpress_scraper.md  eliminate_dups_in_csv.py  extract_first_column_of_csv.py  patron.py  pie_chart_generator.py  pyproject.toml  requirements.txt  scans_rename.py  sphere_texture_generator.py  square_image_with_centered_cross_generator.py  svg_pattern_for_vase.py  svg_to_bitmap_converter.py  triangles.py  unzip_files_then_clean.py  video_content_cutter.py  wordpress_scraper.py
