[project]
name = "python-scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Olivier Pons",email = "olivier.pons@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow (>=11.3.0,<12.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "noise (>=1.2.2,<2.0.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
